UCLALIB-262: Ensure top region panes dont lose their padding on mobile.

--- a/www/sites/all/themes/uclalib_omega/sass/regions/_top.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/regions/_top.scss
@@ -1,3 +1,9 @@
+.l-region--top {
+  .panel-pane {
+    margin: 24px 0;
+  }
+}
+
 @media #{$desk-only} {
   .l-region--top {
     background: $content-background-gray;
@@ -7,9 +13,6 @@
     float: left;
     width: 100%;
     @include clearfix;
-    .panel-pane {
-      margin: 24px 0;
-    }
   }
 
   // Extend background color into the gutters.
